# remrob-server

./: .env.example  .gitignore  .gitmodules  .prettierignore  .prettierrc  Dockerfile.flask  Dockerfile.node  Dockerfile.postgres  LICENSE  README.md  app.js  build-image.sh  docker-compose.yaml  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  index.js  nginx.conf  package-lock.json  package.json  websockify.service
compose/: .gitignore  README.md  compose_generator.py
compose/config/: config-local.yaml  config-macvlan.yaml
compose/templates/: local.j2  macvlan.j2
compose/templates/jazzy/: local-nvidia.j2  local.j2  macvlan-nvidia.j2  macvlan.j2
compose/templates/noetic/: local-nvidia.j2  local.j2  macvlan-nvidia.j2  macvlan.j2
config/: default.json
data/: db.js  knexfile.js
db/: init.sql
images/: .docker-entrypoint.sh  .env.sh  Dockerfile  README.md  docker-compose.example.yaml  docker-compose.yaml  novnc.service  tigervnc@.service  user
images/noVNC/app/: ui.js
images/novnc-ros-desktop/noetic/: Dockerfile  novnc.service
images/robotont-1/: docker-compose.yaml
images/robotont-2/: docker-compose.yaml
images/robotont-3/: docker-compose.yaml
images/robotont-4/: docker-compose.yaml
images/src/robotont_demos/: .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  package.xml
images/src/robotont_demos/config/: robotont_2d_mapping.rviz  robotont_3d_mapping.rviz  robotont_cartographer_2d.lua  robotont_show_ar.rviz
images/src/robotont_demos/include/robotont_demos/: robotont_teleop_joy.h
images/src/robotont_demos/launch/: 2d_slam.launch  2d_slam_create_map.launch  2d_slam_display.launch  2d_slam_navigation.launch  3d_mapping.launch  3d_mapping_display.launch  ar_follow_the_leader.launch  ar_marker_display.launch  cartographer.launch  gmapping.launch  hector_slam.launch  teleop_joy.launch  teleop_keyboard.launch
images/src/robotont_demos/scripts/: ar_follow_the_leader_controller.py  led_demo.py  range_sensor_led.py
images/src/robotont_demos/src/: teleop_joy.cpp
images/src/robotont_description/: .travis.yml  CMakeLists.txt  README.md  package.xml
images/src/robotont_description/config/: robotont_description.rviz
images/src/robotont_description/launch/: display_real_robot.launch  display_simulated_robot.launch  upload_description.launch
images/src/robotont_description/urdf/: robotont_base.urdf.xacro  roller.urdf.xacro
images/src/robotont_gazebo/: .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  package.xml
images/src/robotont_gazebo/launch/: gazebo.launch  spawn_urdf.launch  upload_description.launch  world_bangbang.launch  world_between.launch  world_colors.launch  world_minimaze.launch  world_minimaze_ar.launch
images/src/robotont_gazebo/media/materials/scripts/: ArTag1.material  ArTag2.material  ArTag3.material  ArTag4.material  ArTag5.material  WhiteBricks.material
images/src/robotont_gazebo/meshes/: ar1.dae  bricks1.dae  bricks2.dae  wall.stl
images/src/robotont_gazebo/models/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
images/src/robotont_gazebo/models/marker2/: model-1_4.sdf  model-1_5.sdf  model.sdf
images/src/robotont_gazebo/models/marker3/: model-1_4.sdf  model-1_5.sdf  model.sdf
images/src/robotont_gazebo/models/marker4/: model-1_4.sdf  model-1_5.sdf  model.sdf
images/src/robotont_gazebo/models/marker5/: model-1_4.sdf  model-1_5.sdf  model.sdf
images/src/robotont_gazebo/urdf/: gazebo_rim.urdf.xacro  gazebo_roller.urdf.xacro  robotont_gazebo_basic.urdf.xacro
images/src/robotont_gazebo/worlds/: ar.world  between.world  colors.world  maze.world  minimaze.world  minimaze_ar.world  minimaze_ar_moving.world
images/src/robotont_msgs/: CMakeLists.txt  README.md  package.xml
images/src/robotont_msgs/msg/: ColorRGB.msg  LaserScanSplit.msg  LedModulePixel.msg  LedModuleSegment.msg  PowerSupply.msg
images/src/robotont_navigation/: .travis.yml  CMakeLists.txt  README.md  package.xml
images/src/robotont_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  move_base_params.yaml  planner_global_params.yaml  planner_local_params.yaml
images/src/robotont_navigation/launch/: move_base.launch
images/src/robotont_nuc_description/: .travis.yml  CMakeLists.txt  README.md  package.xml
images/src/robotont_nuc_description/config/: robotont_realsense.rviz
images/src/robotont_nuc_description/launch/: display_real_robot.launch  display_simulated_robot.launch  upload_description.launch
images/src/robotont_nuc_description/meshes/: camera_assembly_part1.stl  camera_assembly_part2.stl
images/src/robotont_nuc_description/urdf/: robotont_realsense.urdf.xacro
server/: .env.example  .gitignore  README.md  app.js  ecosystem.config.js  knexfile.js  package-lock.json  package.json  websockify-token.cfg
server/client/: .env  README.md  package-lock.json  package.json
server/client/public/: index.html
server/client/src/: App.css  App.js  index.css
server/compose/: README.md  compose_generator.py  container-master.js  docker-compose.yaml  live.js  ownclouder.js  robotont-ip.yaml  session-compose.js
server/compose/code_upload/: .env.example  git-master.js
server/compose/config/: config-local.yaml  config-macvlan.yaml
server/compose/local/: robo-1.yaml  robo-2.yaml  robo-3.yaml  robo-4.yaml
server/compose/macvlan/: robo-1.yaml  robo-2.yaml  robo-3.yaml  robo-4.yaml
server/compose/robo-1/: docker-compose.yaml  robo-1.yaml
server/compose/robo-2/: docker-compose.yaml  robo-2.yaml
server/config/: default.json
server/env/: .robotont-1  .robotont-2  .robotont-3  .robotont-4
server/middleware/: auth.js
server/routes/: api.js  assignment.js  index.js
server/util/: time.js
server/views/: index.hbs
services/: gunicorn.service  websockify.service
src/: app.js  constants.js  containerMonitor.js
src/api/: index.js
src/docker/: containerManager.js  containerMonitor.js  getDockerImages.js  index.js
src/session/: assignment.js  booking.js  inventory.js  owncloud.js  sessionComposer.js
src/util/: calculateCpuPercentage.js  cookies.js  erorrs.js  time.js
(+35 files in other folders)
