<?xml version="1.0"?>
<package format="2">
  <name>robotont_gazebo</name>
  <version>0.0.2</version>
  <description>The robotont_gazebo package</description>

  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <url type="website">https://wiki.ros.org/robotont</url>
  <url type="website">http://robotont.ut.ee</url>
  <url type="repository">http://github.com/robotont/robotont_gazebo</url>

  <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>joy</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>

    <exec_depend>robotont_description</exec_depend>
    <exec_depend>robotont_nuc_description</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>
