<?xml version="1.0"?>
<package>
  <name>robotont_msgs</name>
  <version>0.0.2</version>
  <description>The robotont_msgs package</description>

  <author email="veix123@gmail.com">Veiko Vunder</author>

  <maintainer email="veix123@gmail.com">Veiko Vunder</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
