<?xml version="1.0"?>
<package format="2">
  <name>robotont_navigation</name>
  <version>0.0.0</version>
  <description>The robotont_navigation package</description>

  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <url type="website">https://wiki.ros.org/robotont</url>
  <url type="website">http://robotont.ut.ee</url>
  <url type="repository">http://github.com/robotont/robotont_navigation</url>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>

  <export>
  </export>

</package>
