<?xml version="1.0"?>
<package format="2">
  <name>robotont_nuc_description</name>
  <version>0.0.2</version>
  <description>The robotont_nuc_description package</description>

  <author>Maarika Oidekivi</author>

  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <url type="website">https://wiki.ros.org/robotont</url>
  <url type="website">http://robotont.ut.ee</url>
  <url type="repository">http://github.com/robotont/robotont_nuc_description</url>

  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>robotont_description</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
 
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
